--- a/app/views/renalware/exit_site_infections/edit.html.slim
+++ b/app/views/renalware/exit_site_infections/edit.html.slim
@@ -1,23 +1,17 @@
-.wide-screen
-  .columns.large-12
-    = render partial: "renalware/patients/patient_info_header", locals: { model: @patient }
-    = render partial: "renalware/patients/mini_renal_profile", locals: { model: @patient }
+= render layout: "renalware/pd/layout", locals: { header: "Exit Site Infection", patient: @patient } do
 
-    h1 Exit Site Infection
+  .row
+    .large-12.columns
+      = render partial: "renalware/shared/errors", locals: { model: @exit_site_infection }
 
-    = render partial: "renalware/pd_summaries/header", locals: { patient: @patient }
+  .row
+    .large-12.columns
+      = nested_form_for [@patient, @exit_site_infection], method: :put do |es|
 
-  .large-12.columns
-    = render partial: "renalware/shared/errors", locals: { model: @exit_site_infection }
+        .row
+          = render partial: "renalware/exit_site_infections/form", locals: { es: es }
 
-.row
-  .large-12.columns
-    = nested_form_for [@patient, @exit_site_infection], method: :put do |es|
-
-      .row
-        = render partial: "renalware/exit_site_infections/form", locals: { es: es }
-
-      .row.button-padding
-        = submit_tag "Save", class: "button"
-        span= " or "
-        = link_to "cancel", patient_exit_site_infection_path(@patient, @exit_site_infection.id)
+        .row.button-padding
+          = submit_tag "Save", class: "button"
+          span= " or "
+          = link_to "cancel", patient_exit_site_infection_path(@patient, @exit_site_infection.id)
