--- a/app/views/renalware/pd_regimes/new.html.slim
+++ b/app/views/renalware/pd_regimes/new.html.slim
@@ -1,21 +1,15 @@
-.wide-screen
-  .columns.large-12
-    = render partial: "renalware/patients/patient_info_header", locals: { model: @patient }
-    = render partial: "renalware/patients/mini_renal_profile", locals: { model: @patient }
+- header = "#{capd_apd_title(@pd_regime.type)} Regime"
+= render layout: "renalware/pd/layout", locals: { header: header, patient: @patient } do
+  .row
+    .large-12.columns
+      = render partial: "renalware/shared/errors", locals: { model: @pd_regime }
 
-    h1= "#{capd_apd_title(@pd_regime.type)} Regime"
+  .row
+    = nested_form_for [@patient, @pd_regime], as: :pd_regime do |r|
+      .row
+        = render partial: 'renalware/pd_regimes/form', locals: { r: r }
 
-    = render partial: "renalware/pd_summaries/header", locals: { patient: @patient }
-.row
-  .large-12.columns
-    = render partial: "renalware/shared/errors", locals: { model: @pd_regime }
-
-.row
-  = nested_form_for [@patient, @pd_regime], as: :pd_regime do |r|
-    .row
-      = render partial: 'renalware/pd_regimes/form', locals: { r: r }
-
-    .large-12.columns.button-padding
-      = submit_tag "Save", class: "button"
-      span= " or "
-      = link_to "cancel", patient_pd_summary_path(@patient)
+      .large-12.columns.button-padding
+        = submit_tag "Save", class: "button"
+        span= " or "
+        = link_to "cancel", patient_pd_summary_path(@patient)
