--- a/app/views/renalware/peritonitis_episodes/edit.html.slim
+++ b/app/views/renalware/peritonitis_episodes/edit.html.slim
@@ -1,23 +1,16 @@
-.wide-screen
-  .columns.large-12
-    = render partial: "renalware/patients/patient_info_header", locals: { model: @patient }
-    = render partial: "renalware/patients/mini_renal_profile", locals: { model: @patient }
+= render layout: "renalware/pd/layout", locals: { header: "Peritonitis Episode", patient: @patient } do
+  .row
+    .large-12.columns
+      = render partial: "renalware/shared/errors", locals: { model: @peritonitis_episode }
 
-    h1 Peritonitis Episode
+  .row
+    .large-12.columns
+      = nested_form_for [@patient, @peritonitis_episode], method: :put do |pe|
 
-    = render partial: "renalware/pd_summaries/header", locals: { patient: @patient }
+        .row
+          = render partial: "renalware/peritonitis_episodes/form", locals: { pe: pe }
 
-  .large-12.columns
-    = render partial: "renalware/shared/errors", locals: { model: @peritonitis_episode }
-
-.row
-  .large-12.columns
-    = nested_form_for [@patient, @peritonitis_episode], method: :put do |pe|
-
-      .row
-        = render partial: "renalware/peritonitis_episodes/form", locals: { pe: pe }
-
-      .row.button-padding
-        = submit_tag "Save", class: "button"
-        span= " or "
-        = link_to "cancel", patient_peritonitis_episode_path(@patient, @peritonitis_episode.id)
+        .row.button-padding
+          = submit_tag "Save", class: "button"
+          span= " or "
+          = link_to "cancel", patient_peritonitis_episode_path(@patient, @peritonitis_episode.id)
