--- a/app/views/renalware/pd_regimes/_apd_regime_show.html.slim
+++ b/app/views/renalware/pd_regimes/_apd_regime_show.html.slim
@@ -1,27 +1,15 @@
-ul.no-bullet
-  li.padding-bottom-1
-    b Last fill:
-    | &nbsp;
-    = "#{@pd_regime.last_fill_ml} ml"
-  li.padding-bottom-1
-    b Additional manual exchange?:
-    | &nbsp;
-    = yes_no(@pd_regime.add_manual_exchange)
-  li.padding-bottom-1
-    b Has tidal?:
-    | &nbsp;
-    = yes_no(@pd_regime.tidal_indicator)
-  li.padding-bottom-1
-    b Tidal:
-    | &nbsp;
-    = "#{@pd_regime.tidal_percentage} %"
-  li.padding-bottom-1
-    b Number of cycles per APD session:
-    | &nbsp;
-    = @pd_regime.no_cycles_per_apd
-  li.padding-bottom-1
-    b Overnight PD volume on APD:
-    | &nbsp;
-    = "#{@pd_regime.overnight_pd_ml} ml"
-
-
+fieldset
+  legend APD
+  dd
+    dt Last fill:
+    dl= "#{@pd_regime.last_fill_ml} ml"
+    dt Additional manual exchange?:
+    dl= yes_no(@pd_regime.add_manual_exchange)
+    dt Has tidal?:
+    dl= yes_no(@pd_regime.tidal_indicator)
+    dt Tidal:
+    dl= "#{@pd_regime.tidal_percentage} %"
+    dt Number of cycles per APD session:
+    dl= @pd_regime.no_cycles_per_apd
+    dt Overnight PD volume on APD:
+    dl= "#{@pd_regime.overnight_pd_ml} ml"
