--- a/app/views/renalware/pd_regimes/show.html.slim
+++ b/app/views/renalware/pd_regimes/show.html.slim
@@ -1,57 +1,45 @@
-.wide-screen
-  .columns.large-12
-    = render partial: "renalware/patients/patient_info_header", locals: { model: @patient }
-    = render partial: "renalware/patients/mini_renal_profile", locals: { model: @patient }
+= render layout: "renalware/pd/layout", locals: { header: "PD Regime", patient: @patient } do
+  .row
+    .large-12.columns
+      p
+        = "Last Updated: #{@pd_regime.updated_at}"
+        = pipe_separator
+        = link_to "Edit", edit_patient_pd_regime_path(@patient, @pd_regime.id)
 
-.row
-  h4
-    | PD Regime Details
-
-.row
-  = field_set_tag do
-    legend.title-bold
-      = "Last Updated: #{@pd_regime.updated_at}"
-
+  .row
     .large-12.columns
       .large-6.columns
-        ul.no-bullet
-          .padding-bottom-1
-            li
-              b Start Date:
-              | &nbsp;
-              = @pd_regime.start_date
-          .padding-bottom-1
-            li
-              b End Date:
-              | &nbsp;
-              = default_for_blank(@pd_regime.end_date, "Pending")
-          .padding-bottom-1
-            li
-              b Treatment:
-              | &nbsp;
-              = @pd_regime.treatment
-          .padding-bottom-1
-            li
-              b On additional HD?:
-              | &nbsp;
-              = yes_no(@pd_regime.add_hd)
+        fieldset
+          legend Treatment
 
-          li
-            b Average Daily Glucose:
+          dd
+            dt Start:
+            dl = @pd_regime.start_date
 
+            dt End:
+            dl= default_for_blank(@pd_regime.end_date, "Pending")
+
+            dt Treatment:
+            dl= @pd_regime.treatment
+
+            dt On additional HD?:
+            dl= yes_no(@pd_regime.add_hd)
+
+          dt Average Daily Glucose:
+          dl
             ul
               li
-                b 1.36%:
+                b 1.36%
                 | &nbsp;
                 = "#{ default_daily_glucose_average(@pd_regime.glucose_ml_percent_1_36) } ml"
 
               li
-                b 2.27%:
+                b 2.27%
                 | &nbsp;
                 = "#{ default_daily_glucose_average(@pd_regime.glucose_ml_percent_2_27) } ml"
 
               li
-                b 3.86%:
+                b 3.86%
                 | &nbsp;
                 = "#{ default_daily_glucose_average(@pd_regime.glucose_ml_percent_3_86) } ml"
 
@@ -60,14 +48,9 @@
         - if @pd_regime.type == 'Renalware::APDRegime'
           = render partial: 'renalware/pd_regimes/apd_regime_show', locals: { model: @pd_regime }
 
-    .large-12.columns
-      .section-underliner.title-bold.padding-top-1
-        | Bags:
+      .large-12.columns
+        fieldset
+          legend Bags
 
-      .large-12.columns.padding-bottom-1
-        ul
-          = pd_regime_bags(@pd_regime.pd_regime_bags)
-
-    .large-12.columns.button-padding
-      = link_to "Edit", edit_patient_pd_regime_path(@patient, @pd_regime.id), class: "tiny button right"
-      = link_to "Back", patient_pd_summary_path(@patient), class: "button tiny left cancel"
+          ul
+            = pd_regime_bags(@pd_regime.pd_regime_bags)
