--- a/app/views/renalware/patients/_patient.html.slim
+++ b/app/views/renalware/patients/_patient.html.slim
@@ -3,6 +3,6 @@ tr
   td= patient.to_s(:last_first)
   td= patient.nhs_number
   td= patient.local_patient_id
-  td= I18n.t("enums.gender.#{patient.sex}")
+  td= patient.sex
   td= patient.birth_date
   td= patient.age
