--- a/app/views/renalware/transplants/donor_workups/_dated_result_field.html.slim
+++ b/app/views/renalware/transplants/donor_workups/_dated_result_field.html.slim
@@ -1,9 +1,8 @@
 = f.simple_fields_for attribute, f.object.send(attribute) do |fd|
   tr.dated-confirmation
     td
-      = fd.label :status, f.object.class.human_attribute_name(attribute)
+      = fd.label :result, f.object.class.human_attribute_name(attribute)
     td
-      = fd.input :status, as: :inline_radio_buttons,
-        label: false, wrapper: "vertical_form"
+      = fd.input :result, label: false, wrapper: "vertical_form"
     td
       = fd.input :date, as: :date_picker, label: false, wrapper: "vertical_form"
