--- a/app/assets/stylesheets/renalware/forms.css.scss
+++ b/app/assets/stylesheets/renalware/forms.css.scss
@@ -7,20 +7,24 @@
 }
 
 .document form {
-  .wrapper {
+  .form-content {
     max-width: 960px;
   }
 
   .datepicker-wrapper {
-    max-width: 240px !important;
+    max-width: 250px !important;
   }
 
   .small-input {
-    max-width: 240px !important;
+    max-width: 250px !important;
   }
 
   label.radio_buttons {
     padding: 0;
+  }
+
+  label.inline {
+    margin-right: 0.3rem;
   }
 
   .datepicker-wrapper {
@@ -32,14 +36,26 @@
   table {
     border: none;
 
+    &.no-stripes tr:nth-of-type(even) {
+      background-color: transparent !important;
+    }
+
     td {
       vertical-align: top;
+
+      .row .datepicker-wrapper {
+        margin-top: -4px !important;
+      }
+
+      input {
+        margin: 0;
+      }
     }
 
     th:first-child,
     td:first-child {
       text-align: right;
-      width: 41%;
+      width: 41.3%;
       padding-top: 11px;
     }
   }
