Shorten the magellan sub-nav

--- a/app/views/renalware/transplants/donor_workups/_form.html.slim
+++ b/app/views/renalware/transplants/donor_workups/_form.html.slim
@@ -9,9 +9,9 @@ ruby:
     ["Relationship", "relationship"],
     ["Co-morbidities", "comorbidities"],
     ["Infections", "infections"],
-    ["Imaging and Scans", "imaging_and_scans"],
+    ["Imaging/Scans", "imaging_and_scans"],
     ["Creatinine Clearance", "creatinine_clearance"],
-    ["Glomerular Filtration Rate", "glomerular_filtration_rate"],
+    ["GFR", "glomerular_filtration_rate"],
     ["Urine Dipsticks", "urine_dipsticks"],
     ["Other Investigations", "other_investigations"]
   ]
