--- a/app/views/renalware/transplants/donor_workups/_form.html.slim
+++ b/app/views/renalware/transplants/donor_workups/_form.html.slim
@@ -39,37 +39,37 @@ ruby:
       = fd.simple_fields_for :comorbidities, fd.object.comorbidities do |fcm|
         table
           - fcm.object.class.attributes_list.each do |attribute|
-            = render "dated_confirmation_field", attribute: attribute, f: fcm
+            = render_input fcm, attribute
 
     = render layout: "fieldset",
       locals: { legend: "Virology/Bacteriology/Cytology", name: "infections" } do
       = fd.simple_fields_for :infections, fd.object.infections do |fcm|
-        / = fcm.input :hiv_status, input_html: { class: "small-input" }
-        / = fcm.input :hcv_status, input_html: { class: "small-input" }
-        / = fcm.input :htlv_status, input_html: { class: "small-input" }
-        / = fcm.input :syphilis_test, input_html: { class: "small-input" }
         table.no-stripes
-          = render "dated_test_field", attribute: :htlv, f: fcm
-          = render "dated_test_field", attribute: :ebv, f: fcm
-          = render "dated_test_field", attribute: :syphilis, f: fcm
-          = render "dated_test_field", attribute: :toxoplasmosis, f: fcm
-          = render "dated_test_field", attribute: :cytology, f: fcm
+          = render_input fcm, :hiv
+          = render_input fcm, :hcv
+          = render_input fcm, :htlv_preop
+          = render_input fcm, :syphilis_preop
+          = render_input fcm, :htlv
+          = render_input fcm, :ebv
+          = render_input fcm, :syphilis
+          = render_input fcm, :toxoplasmosis
+          = render_input fcm, :cytology
 
     = render layout: "fieldset",
       locals: { legend: "Imaging and Scans", name: "imaging_and_scans" } do
       = fd.simple_fields_for :imaging_and_scans, fd.object.imaging_and_scans do |fcm|
         table.no-stripes
-          = render "dated_result_field", attribute: :ecg_comment, f: fcm
-          = render "dated_result_field", attribute: :chest_xray, f: fcm
-          = render "dated_result_field", attribute: :renal_ultrasound, f: fcm
+          = render_input fcm, :ecg_comment
+          = render_input fcm, :chest_xray
+          = render_input fcm, :renal_ultrasound
 
     = render layout: "fieldset",
       locals: { legend: "Creatinine Clearance", name: "creatinine_clearance" } do
       = fd.simple_fields_for :creatinine_clearance, fd.object.creatinine_clearance do |fcm|
         = fcm.input :clearance_type, input_html: { class: "small-input" }
         table.no-stripes
-          = render "dated_result_field", attribute: :clearance, f: fcm
-          = render "dated_result_field", attribute: :measured_clearance, f: fcm
+          = render_input fcm, :clearance
+          = render_input fcm, :measured_clearance
 
     = render layout: "fieldset",
       locals: { legend: "Glomerular Filtration Rate (GFR)", name: "glomerular_filtration_rate" } do
@@ -78,15 +78,15 @@ ruby:
         = fcm.input :is_measured_value_corrected, as: :inline_radio_buttons
         = fcm.input :value_corrected_for_bsa, as: :inline_radio_buttons
         table.no-stripes
-          = render "dated_result_field", attribute: :measured_value, f: fcm
-          = render "dated_result_field", attribute: :isotopic_value, f: fcm
+          = render_input fcm, :measured_value
+          = render_input fcm, :isotopic_value
 
     = render layout: "fieldset",
       locals: { legend: "Urine Dipsticks", name: "urine_dipsticks" } do
       = fd.simple_fields_for :urine_dipsticks, fd.object.urine_dipsticks do |fcm|
         table.no-stripes
-          = render "dated_result_field", attribute: :blood, f: fcm
-          = render "dated_result_field", attribute: :protein, f: fcm
+          = render_input fcm, :blood
+          = render_input fcm, :protein
 
     = render layout: "fieldset",
       locals: { legend: "Other Investigations", name: "other_investigations" } do
@@ -94,10 +94,10 @@ ruby:
         = fcm.input :number_renal_arteries, collection: (1..5).to_a, input_html: { class: "small-input" }
         = fcm.input :sitting_blood_pressure, input_html: { class: "small-input" }
         table.no-stripes
-          = render "dated_result_field", attribute: :protein_creatinine_ratio, f: fcm
-          = render "dated_result_field", attribute: :egfr, f: fcm
-          = render "dated_result_field", attribute: :haemoglobinopathy, f: fcm
-          = render "dated_result_field", attribute: :oral_gtt, f: fcm
+          = render_input fcm, :protein_creatinine_ratio
+          = render_input fcm, :egfr
+          = render_input fcm, :haemoglobinopathy
+          = render_input fcm, :oral_gtt
 
 .row
   .large-12.columns
